bulk assign and removing redundant apis
